<resources>

    <string name="app_name">Reiki Sound</string>


    <string name="donate_title_choose">Gracias por donar a Reiki Sound</string>
    <string name="donate_subtitle_choose">Cuánto desea donar?</string>

    <string name="donate_title">Gracias por usar Reiki Sound :)</string>
    <string name="donate_subtitle">Reiki Sound es gratis y libre de publicidades!</string>
    <string name="donate_body">Es muy útil para nuestro equipo que pueda colaborar para seguir manteniendo y mejorando el servicio para todos los reikistas.</string>
    <string name="donate_button">Donar</string>
    <string name="donate_thanks">Muchas gracias por su ayuda!</string>
    <string name="donate_button_not">No, gracias</string>

    <string name="select_audio_title">Seleccionar música</string>
    <string name="select_audio_body">Elegir una canción de su dispositivo o usar la música por defecto de Reiki Sound?</string>
    <string name="select_audio_select">Seleccionar</string>
    <string name="select_audio_default">Usar default</string>

    <string name="selected_audio">Audio seleccionado</string>
    <string name="selected_audio_body">Lo sentimos pero no se puede reproducir el elemento seleccionado, intente con otro audio o bien cambie el formato.</string>

    <string name="mercadopago_fail" translatable="false">Tu pago no pudo ser efectuado, vuelva a intentarlo</string>
    <string name="mercadopago_success" translatable="false">Gracias por tu ayuda a Reiki Sound!</string>

    <string name="music_selected">Música seleccionada</string>

    <string name="service_subtitle">Cronómetro corriendo...</string>

    <string name="time_title">Tiempo (minutos):</string>
    <string name="enable_music">Activar música</string>
    <string name="remaining">Tiempo restante:</string>

</resources>
