<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="13dp"
    app:cardElevation="4dp"
    android:layout_margin="30dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/donate_title"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#ca000000"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/donate_subtitle"
            android:textSize="15sp"
            android:textColor="#41ccff"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/donate_body"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/donate_thanks"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_no"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:layout_gravity="center_vertical"
                android:textColor="#ffb020"
                android:textStyle="bold"
                android:text="@string/donate_button_not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_ok"
                android:text="@string/donate_button"
                android:textColor="#ffffff"
                android:background="@drawable/boton_play"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>